dodanie endpointa findAll użytkowników
